# kagemushaai

./: CONTRIBUTING.md  Cargo.toml  README.md
apps/cli/: Cargo.toml
apps/desktop/flatpak/: com.hyprnote.Hyprnote.desktop  com.hyprnote.Hyprnote.metainfo.xml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src/chat/components/: header.tsx  trigger.tsx
apps/desktop/src/chat/components/body/: empty.tsx
apps/desktop/src/i18n/: index.ts  translations.ts  useTranslation.ts
apps/desktop/src/live-assist/: LiveAssistPanel.tsx  extractKeyPoints.test.ts  extractKeyPoints.ts  index.ts
apps/desktop/src/onboarding/: index.tsx
apps/desktop/src/onboarding/account/: before-login.tsx
apps/desktop/src/routes/app/main/: _layout.index.tsx
apps/desktop/src/services/metrics/: MetricsPanel.tsx  calculator.test.ts  calculator.ts  index.ts  useConversationMetrics.ts
apps/desktop/src/settings/general/: account.tsx  index.tsx
apps/desktop/src/shared/main/: index.tsx
apps/web/content/docs/developers/: 1.env.mdx
apps/web/content/templates/: gunbai-action-items.mdx  kagemusha-briefing.mdx  sengoku-retrospective.mdx
apps/web/src/components/: cta-card.tsx  download-button.tsx  footer.tsx  header.tsx
apps/web/src/routes/: __root.tsx  contact.tsx
apps/web/src/routes/_view/: brand.tsx
apps/web/src/routes/_view/jobs/: $slug.tsx  (+1 more)
apps/web/src/utils/: sitemap.ts
crates/activity-capture-windows/: Cargo.toml
crates/activity-capture-windows/src/: lib.rs  platform.rs
crates/diarization/: Cargo.toml
crates/diarization/src/: lib.rs
scripts/: package.json
(+17 files in other folders)
