[package]
name = "activity-capture-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-core = { workspace = true }
hypr-activity-capture-interface = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
async-stream = { workspace = true }

windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }
